--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
                 <input type="email" id="email" name="email" placeholder="Required" required><br>
             </div>
 
+            <div class="col">
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" placeholder="Required" required><br>
+            </div>
+
             <div class="third col">
                 <label for="phone">Phone Number</label>
                 <input type="tel" id="phone" name="phone"><br>
@@ -141,7 +146,7 @@
                 <label for="plain-text" class="light">Plain text</label><br><br>
 
                 <label for="other-topics">Other topics you'd like to hear about</label><br>
-                <textarea id="other-topics" name="other-topics"></textarea><br>
+                <textarea id="other-topics" name="other-topics" placeholder="For example, Angular news and other topics."></textarea><br>
 
                 <button type="submit">Sign Up</button>
             </div>
