--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
             <div class="fourth col">
                 <label for="staddress">Street Address</label>
-                <input type="street-address" id="staddress" name="staddress"><br>
+                <input type="text" id="staddress" name="staddress"><br>
             </div>
 
             <div class="fifth col">
@@ -114,7 +114,7 @@
             <div class="seven col">
                 <label for="zipcode">Zip Code</label>
                 <div id="zipco">
-                    <input type="zip" id="zipcode" name="zipcode">
+                    <input type="text" id="zipcode" name="zipcode">
                 </div>
             </div>
 
