--- a/index.html
+++ b/index.html
@@ -22,135 +22,141 @@
             </div>
             <hr id="one">
             <hr class="two">
-            <h3>Contact Information</h3>
+            <fieldset class="form-fieldset">
+                <legend id="form-title">Contact Information</legend>
 
-            <div class="first col">
-                <label for="name">Full Name</label>
-                <input type="text" id="name" name="name" placeholder="Required" required><br>
-            </div>
-
-            <div class="second col">
-                <label for="email">Email Address</label>
-                <input type="email" id="email" name="email" placeholder="Required" required><br>
-            </div>
-
-            <div class="col">
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" placeholder="Required" required><br>
-            </div>
-
-            <div class="third col">
-                <label for="phone">Phone Number</label>
-                <input type="tel" id="phone" name="phone"><br>
-            </div>
-
-            <div class="fourth col">
-                <label for="staddress">Street Address</label>
-                <input type="text" id="staddress" name="staddress"><br>
-            </div>
-
-            <div class="fifth col">
-                <label for="city">City</label>
-                <input type="text" id="city" name="city"><br>
-            </div>
-
-            <div class="six col">
-                <label for="state">State</label>
-                <select id="state">
-                    <option value="AL">Alabama</option>
-                    <option value="AK">Alaska</option>
-                    <option value="AZ">Arizona</option>
-                    <option value="AR">Arkansas</option>
-                    <option value="CA">California</option>
-                    <option value="CO">Colorado</option>
-                    <option value="CT">Connecticut</option>
-                    <option value="DE">Delaware</option>
-                    <option value="DC">District Of Columbia</option>
-                    <option value="FL">Florida</option>
-                    <option value="GA">Georgia</option>
-                    <option value="HI">Hawaii</option>
-                    <option value="ID">Idaho</option>
-                    <option value="IL">Illinois</option>
-                    <option value="IN">Indiana</option>
-                    <option value="IA">Iowa</option>
-                    <option value="KS">Kansas</option>
-                    <option value="KY">Kentucky</option>
-                    <option value="LA">Louisiana</option>
-                    <option value="ME">Maine</option>
-                    <option value="MD">Maryland</option>
-                    <option value="MA">Massachusetts</option>
-                    <option value="MI">Michigan</option>
-                    <option value="MN">Minnesota</option>
-                    <option value="MS">Mississippi</option>
-                    <option value="MO">Missouri</option>
-                    <option value="MT">Montana</option>
-                    <option value="NE">Nebraska</option>
-                    <option value="NV">Nevada</option>
-                    <option value="NH">New Hampshire</option>
-                    <option value="NJ">New Jersey</option>
-                    <option value="NM">New Mexico</option>
-                    <option value="NY">New York</option>
-                    <option value="NC">North Carolina</option>
-                    <option value="ND">North Dakota</option>
-                    <option value="OH">Ohio</option>
-                    <option value="OK">Oklahoma</option>
-                    <option value="OR">Oregon</option>
-                    <option value="PA">Pennsylvania</option>
-                    <option value="RI">Rhode Island</option>
-                    <option value="SC">South Carolina</option>
-                    <option value="SD">South Dakota</option>
-                    <option value="TN">Tennessee</option>
-                    <option value="TX">Texas</option>
-                    <option value="UT">Utah</option>
-                    <option value="VT">Vermont</option>
-                    <option value="VA">Virginia</option>
-                    <option value="WA">Washington</option>
-                    <option value="WV">West Virginia</option>
-                    <option value="WI">Wisconsin</option>
-                    <option value="WY">Wyoming</option>
-                </select><br>
-            </div>
-
-            <div class="seven col">
-                <label for="zipcode">Zip Code</label>
-                <div id="zipco">
-                    <input type="text" id="zipcode" name="zipcode">
+                <div class="first col">
+                    <label for="name">Full Name</label>
+                    <input type="text" id="name" name="name" placeholder="Required" required><br>
                 </div>
-            </div>
+
+                <div class="second col">
+                    <label for="email">Email Address</label>
+                    <input type="email" id="email" name="email" placeholder="Required" required><br>
+                </div>
+
+                <div class="col">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password" placeholder="Required" required><br>
+                </div>
+
+                <div class="third col">
+                    <label for="phone">Phone Number</label>
+                    <input type="tel" id="phone" name="phone"><br>
+                </div>
+
+                <div class="fourth col">
+                    <label for="staddress">Street Address</label>
+                    <input type="text" id="staddress" name="staddress"><br>
+                </div>
+
+                <div class="fifth col">
+                    <label for="city">City</label>
+                    <input type="text" id="city" name="city"><br>
+                </div>
+
+                <div class="six col">
+                    <label for="state">State</label>
+                    <select id="state">
+                        <option value="AL">Alabama</option>
+                        <option value="AK">Alaska</option>
+                        <option value="AZ">Arizona</option>
+                        <option value="AR">Arkansas</option>
+                        <option value="CA">California</option>
+                        <option value="CO">Colorado</option>
+                        <option value="CT">Connecticut</option>
+                        <option value="DE">Delaware</option>
+                        <option value="DC">District Of Columbia</option>
+                        <option value="FL">Florida</option>
+                        <option value="GA">Georgia</option>
+                        <option value="HI">Hawaii</option>
+                        <option value="ID">Idaho</option>
+                        <option value="IL">Illinois</option>
+                        <option value="IN">Indiana</option>
+                        <option value="IA">Iowa</option>
+                        <option value="KS">Kansas</option>
+                        <option value="KY">Kentucky</option>
+                        <option value="LA">Louisiana</option>
+                        <option value="ME">Maine</option>
+                        <option value="MD">Maryland</option>
+                        <option value="MA">Massachusetts</option>
+                        <option value="MI">Michigan</option>
+                        <option value="MN">Minnesota</option>
+                        <option value="MS">Mississippi</option>
+                        <option value="MO">Missouri</option>
+                        <option value="MT">Montana</option>
+                        <option value="NE">Nebraska</option>
+                        <option value="NV">Nevada</option>
+                        <option value="NH">New Hampshire</option>
+                        <option value="NJ">New Jersey</option>
+                        <option value="NM">New Mexico</option>
+                        <option value="NY">New York</option>
+                        <option value="NC">North Carolina</option>
+                        <option value="ND">North Dakota</option>
+                        <option value="OH">Ohio</option>
+                        <option value="OK">Oklahoma</option>
+                        <option value="OR">Oregon</option>
+                        <option value="PA">Pennsylvania</option>
+                        <option value="RI">Rhode Island</option>
+                        <option value="SC">South Carolina</option>
+                        <option value="SD">South Dakota</option>
+                        <option value="TN">Tennessee</option>
+                        <option value="TX">Texas</option>
+                        <option value="UT">Utah</option>
+                        <option value="VT">Vermont</option>
+                        <option value="VA">Virginia</option>
+                        <option value="WA">Washington</option>
+                        <option value="WV">West Virginia</option>
+                        <option value="WI">Wisconsin</option>
+                        <option value="WY">Wyoming</option>
+                    </select><br>
+                </div>
+
+                <div class="seven col">
+                    <label for="zipcode">Zip Code</label>
+                    <div id="zipco">
+                        <input type="text" id="zipcode" name="zipcode">
+                    </div>
+                </div>
+            </fieldset>
+
 
 
             <hr class="two">
 
+            <fieldset>
+                <legend id="title-newsletter">Newsletter</legend>
 
-            <h2 id="title-newsletter">Newsletter</h2>
+                <div class="interest-bottom">
 
-            <div class="interest-bottom">
+                    <p>Select the newsletters you would like to recieve</p>
 
-                <p>Select the newsletters you would like to recieve</p>
+                    <input type="checkbox" id="html" value="interest-newsletter" name="user-interest">
+                    <label class="light" for="html">HTML News</label><br>
 
-                <input type="checkbox" id="html" value="interest-newsletter" name="user-interest">
-                <label class="light" for="html">HTML News</label><br>
+                    <input type="checkbox" id="css" value="interest-newsletter" name="user-interest">
+                    <label class="light" for="css">CSS News</label><br>
 
-                <input type="checkbox" id="css" value="interest-newsletter" name="user-interest">
-                <label class="light" for="css">CSS News</label><br>
+                    <input type="checkbox" id="javascript" value="interest-newsletter" name="user-interest">
+                    <label class="light" for="javascript">Javascript News</label><br>
 
-                <input type="checkbox" id="javascript" value="interest-newsletter" name="user-interest">
-                <label class="light" for="javascript">Javascript News</label><br>
+                    <p id="newsletter-format">Newsletter format</p>
 
-                <p id="newsletter-format">Newsletter format</p>
+                    <input type="radio" id="html-format" value="html-format" name="newsletter-format">
+                    <label for="html-format" class="light">HTML</label><br>
 
-                <input type="radio" id="html-format" value="html-format" name="newsletter-format">
-                <label for="html-format" class="light">HTML</label><br>
+                    <input type="radio" id="plain-text" value="plain-format" name="newsletter-format">
+                    <label for="plain-text" class="light">Plain text</label><br><br>
 
-                <input type="radio" id="plain-text" value="plain-format" name="newsletter-format">
-                <label for="plain-text" class="light">Plain text</label><br><br>
+                    <label for="other-topics">Other topics you'd like to hear about</label><br>
+                    <textarea id="other-topics" name="other-topics"
+                        placeholder="For example, Angular news and other topics."></textarea><br>
 
-                <label for="other-topics">Other topics you'd like to hear about</label><br>
-                <textarea id="other-topics" name="other-topics" placeholder="For example, Angular news and other topics."></textarea><br>
-
-                <button type="submit">Sign Up</button>
-            </div>
+                    <button type="submit">Sign Up</button>
+                </div>
+            </fieldset>
         </div>
+
 
         <footer>
             <p>Copyright The Code Review</p>
